:art: Modify base design

--- a/views/index.slim
+++ b/views/index.slim
@@ -3,5 +3,10 @@ head
   meta charset='UTF-8'
   title
     | ookami-man
+  script[src='/ookami-man.js']
 body
-  div id='main'
+  div.space
+  h1.title
+    | ookami-man
+  hr.head-line
+
