:sparkles: Add config view

--- a/assets/app.sass
+++ b/assets/app.sass
@@ -17,3 +17,17 @@ h1.title
   font-family: fantasy
   text-align: center
   font-size: 60px
+
+legend
+  color: white !important
+
+input.people
+  height: 40px
+  color: black
+
+button.deside-people
+  float: right
+
+input.user-name
+  color: black !important
+
