:lipstick: modify config window

--- a/assets/app.sass
+++ b/assets/app.sass
@@ -6,7 +6,6 @@ html
 body
   height: 100%
   width: 100%
-  overflow: hidden
   background-color: rgb(27, 25, 25)
   color: white
 
@@ -21,7 +20,7 @@ h1.title
 legend
   color: white !important
 
-input.people
+input.config
   height: 40px
   color: black
 
@@ -31,3 +30,8 @@ button.deside-people
 input.user-name
   color: black !important
 
+button.pure-button-success
+  background: rgb(28, 184, 65)
+  border-radius: 4px
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+  color: white
