--- a/assets/app.sass
+++ b/assets/app.sass
@@ -31,3 +31,25 @@ button.deside-people
 input.user-name
   color: black !important
 
+button.pure-button-success
+  background: rgb(28, 184, 65)
+  border-radius: 4px
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+  color: white
+
+h1.phase
+  font-size: 120px
+  text-align: center
+  margin: 0
+
+h1.time
+  font-size: 100px
+  text-align: center
+  margin: 0
+
+div.extension
+  font-size: 100px
+  background-color: red
+  width: 240px
+  text-align: center
+  margin-left: calc(50% - 120px)
