--- a/views/noon.slim
+++ b/views/noon.slim
@@ -31,8 +31,20 @@ javascript:
       var time = parseInt(appTime.innerText);
       timeElement.innerText = "残り " + --time + " 秒";
       if (time === 0) {
-        location.href = "/night";
-        clearInterval(timer);
+        var speech = new SpeechSynthesisUtterance();
+        speech.voiceURI = 'Kyoko';
+        speech.text = '夜時間が, 訪れました';
+        speech.lang = 'ja-JP';
+        speech.rate = 0.8;
+        speech.volume = 0.8;
+        speech.pitch = 1.1;
+        speechSynthesis.speak(speech);
+        var waitSpeack = setInterval(() => {
+          if (!speechSynthesis.speaking) {
+            location.href = "/night";
+            clearInterval(waitSpeack);
+          }
+        });
       }
       appTime.innerText = time;
     }, 1000);
