coloring and centering "CO" button

--- a/assets/wolf.sass
+++ b/assets/wolf.sass
@@ -1,8 +1,20 @@
-// li
-// .user-list
-//   font-size: 2.4rem
-
 .user-list
   font-size: 23px
   padding: 10px
-//   font-size: 500px
+
+.button-CO,
+.button-secondary
+  color: white
+  border-radius: 4px
+  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2)
+.button-CO
+  background: rgb(202, 60, 60)
+  border-radius: 1000px
+  margin-left: auto
+  margin-right: auto
+div.act-center
+  text-align: center
+
+.chk-button
+  height: 5px
+  width: 5px
