--- a/views/wolf.erb
+++ b/views/wolf.erb
@@ -1,11 +1,11 @@
 <h1 align="center">狼</h1>
 <hr>
 
-<form action="">
-  <input type="submit" value='CO'>
-</form>
+<div class="act-center">
+<button class='button-CO pure-button'>CO</button>
+</div>
 
-<bottun type='bottun'></bottun>
+<button class='chk-button pure-button'></button>
 
 <ul class='user-list'>
   <li>
