--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport" content="text/html; charset=UTF-8; width=device-width" />
+    <meta name="viewport" content="text/html; charset=UTF-8; width=device-width, initial-scale=1" />
     <title>人狼ゲーム</title>
     <script src="/ookami-man.js"></script>
   </head>
