--- a/assets/wolf.sass
+++ b/assets/wolf.sass
@@ -1,6 +1,11 @@
-.user-list
+
+ul.user-list
   font-size: 23px
   padding: 10px
+  mergin-left: 10%
+
+li.appearance
+  display: block
 
 .button-CO,
 .button-secondary
@@ -10,11 +15,16 @@
 .button-CO
   background: rgb(202, 60, 60)
   border-radius: 1000px
+  height: 80px
+  width: 130px
   margin-left: auto
   margin-right: auto
 div.act-center
   text-align: center
 
 .chk-button
-  height: 5px
-  width: 5px
+  height: 10px
+  width: 10px
+
+.centering
+  margin-left: 17%
