--- a/views/wolf.erb
+++ b/views/wolf.erb
@@ -1,31 +1,38 @@
-<h1 align="center">狼</h1>
+<h1 align="center">人狼</h1>
 <hr>
 
 <div class="act-center">
 <button class='button-CO pure-button'>CO</button>
 </div>
 
-<button class='chk-button pure-button'></button>
+<div class="centering">
 
-<ul class='user-list'>
-  <li>
-    list1
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-  </li>
-  <li>
-    list2
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-  </li>
-  <li>
-    list3
-    <input type="radio">
-    <input type="radio">
-    <input type="radio">
-  </li>
-</ul>
+<!--  <button class='chk-button pure-button'></button> -->
 
-<textarea id="" name="" cols="30" rows="10"></textarea>
+  <form action="">
+    <ul class='user-list'>
+      <li class='appearance'>
+        <input type="radio" name='vote'>
+        list1
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </li>
+      <li class='appearance'>
+        <input type="radio" name='vote'>
+        list2
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </li>
+      <li class='appearance'>
+        <input type="radio" name='vote'>
+        list3
+        <input type="checkbox">
+        <input type="checkbox">
+        <input type="checkbox">
+      </li>
+    </ul>
+    <textarea id="" name="" cols="30" rows="10"></textarea>
+  </form>
+</div>
