--- a/views/night.slim
+++ b/views/night.slim
@@ -27,25 +27,31 @@ javascript:
     'use strict';
     var timeElement = document.querySelector('h1.time');
     var appTime = document.querySelector('.app-time');
-    var timer = setInterval(() => {
+    var ws = new WebSocket('ws://' + window.location.host + '/websocket');
+
+    var readMessage = function(msg) {
+      var speech = new SpeechSynthesisUtterance();
+      speech.voiceURI = 'Kyoko';
+      speech.text = msg;
+      speech.lang = 'ja-JP';
+      speech.rate = 0.8;
+      speech.volume = 0.8;
+      speech.pitch = 1.1;
+      speechSynthesis.speak(speech);
+    }
+
+    var changePhase = function() {
+      readMessage('昼時間が訪れました');
+      setTimeout(() => {
+        ws.send('change_to_noon');
+        location.href = "/noon";
+      }, 3000);
+    }
+
+    setInterval(() => {
       var time = parseInt(appTime.innerText);
       timeElement.innerText = "残り " + --time + " 秒";
-      if (time === 0) {
-        var speech = new SpeechSynthesisUtterance();
-        speech.voiceURI = 'Kyoko';
-        speech.text = '昼時間が, 訪れました';
-        speech.lang = 'ja-JP';
-        speech.rate = 0.8;
-        speech.volume = 0.8;
-        speech.pitch = 1.1;
-        speechSynthesis.speak(speech);
-        var waitSpeack = setInterval(() => {
-          if (!speechSynthesis.speaking) {
-            location.href = "/noon";
-            clearInterval(waitSpeack);
-          }
-        });
-      }
+      if (time === 0) { changePhase(); }
       appTime.innerText = time;
     }, 1000);
   })()
